--- a/Mamba-Design1/index.html
+++ b/Mamba-Design1/index.html
@@ -67,9 +67,9 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About Us</a></li>
           <li><a href="#services">Services</a></li>
-          <li><a href="#portfolio">Portfolio</a></li>
-          <li><a href="#team">Team</a></li>
-          <li class="drop-down"><a href="">Drop Down</a>
+          <li><a href="#portfolio">Gallery</a></li>
+          <!-- <li><a href="#team">Team</a></li> -->
+          <!-- <li class="drop-down"><a href="">Drop Down</a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="drop-down"><a href="#">Drop Down 2</a>
@@ -85,7 +85,7 @@
               <li><a href="#">Drop Down 4</a></li>
               <li><a href="#">Drop Down 5</a></li>
             </ul>
-          </li>
+          </li> -->
           <li><a href="#contact">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -625,7 +625,9 @@
             <div class="info-box">
               <i class="bx bx-map"></i>
               <h3>Our Address</h3>
-              <p>A108 Adam Street, New York, NY 535022</p>
+              <p>2920 Colorado Blvd <br>
+
+                Idaho Springs, CO 80452</p>
             </div>
           </div>
 
@@ -633,7 +635,7 @@
             <div class="info-box">
               <i class="bx bx-envelope"></i>
               <h3>Email Us</h3>
-              <p>info@example.com<br>contact@example.com</p>
+              <p>kjw2627@gmail.com</p>
             </div>
           </div>
 
@@ -641,7 +643,7 @@
             <div class="info-box ">
               <i class="bx bx-phone-call"></i>
               <h3>Call Us</h3>
-              <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+              <p>303-567-2691</p>
             </div>
           </div>
 
@@ -688,22 +690,19 @@
         <div class="row">
 
           <div class="col-lg-3 col-md-6 footer-info">
-            <h3>Mamba</h3>
+            <h3>6 & 40 Motel</h3>
             <p>
-              A108 Adam Street <br>
-              NY 535022, USA<br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              2920 Colorado Blvd <br>
+              Idaho Springs, CO 80452<br><br>
+              <strong>Phone:</strong> 303-567-2691<br>
+              <strong>Email:</strong> kjw2627@gmail.com<br>
             </p>
             <div class="social-links mt-3">
-              <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-              <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-              <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-              <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+              <a href="https://www.google.com/travel/hotels/entity/CgoIkYKjieWV_ecBEAE/overview?g2lb=2502548%2C4258168%2C4270442%2C4306835%2C4308227%2C4317915%2C4322823%2C4328159%2C4371335%2C4401769%2C4403882%2C4417925%2C4419364%2C4424916%2C4425793%2C4270859%2C4284970%2C4291517%2C4412693&hl=en&gl=us&un=1&rp=EJGCo4nllf3nARCRgqOJ5ZX95wE4AkAASAHAAQI&ictx=1&sa=X&utm_campaign=sharing&utm_medium=link&utm_source=htls&hrf=KhYKBwjkDxAJGAUSBwjkDxAJGAYYASgAggEkMHg4NzZiYTM1NzE3ZmJiZjUxOjB4MWNmZjRhZTUxMjhjMTExmgEmGiQweDg3NmJhMzU3MTdmYmJmNTE6MHgxY2ZmNGFlNTEyOGMxMTE" class="google"><i class="bx bxl-google"></i></a>
+              <a href="https://www.facebook.com/6n40motel/" class="facebook"><i class="bx bxl-facebook"></i></a>
             </div>
           </div>
-
+<!-- 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
@@ -713,9 +712,9 @@
               <li><i class="bx bx-chevron-right"></i> <a href="#">Terms of service</a></li>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Privacy policy</a></li>
             </ul>
-          </div>
+          </div> -->
 
-          <div class="col-lg-3 col-md-6 footer-links">
+          <!-- <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Services</h4>
             <ul>
               <li><i class="bx bx-chevron-right"></i> <a href="#">Web Design</a></li>
@@ -733,7 +732,7 @@
               <input type="email" name="email"><input type="submit" value="Subscribe">
             </form>
 
-          </div>
+          </div> -->
 
         </div>
       </div>
@@ -741,7 +740,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Mamba</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>6 & 40 Motel</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
