--- a/Mamba-Design1/index.html
+++ b/Mamba-Design1/index.html
@@ -345,9 +345,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item ">
             <div class="portfolio-wrap">
-              <img src="assets/img/slide/image1.PNG" class="img-fluid" alt="">
+              <img src="assets/img/slide/image1.PNG" class="img-fluid pic" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
+                <h4>Motel</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="assets/img/slide/image1.PNG" data-gall="portfolioGallery" class="venobox" title="App 1"><i class="icofont-eye"></i></a>
@@ -359,9 +359,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/slide/image2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slide/image2.jpg" class="img-fluid pic" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
+                <h4>Riverside</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="assets/img/slide/image2.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
@@ -373,9 +373,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/slide/elvis.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slide/elvis.jpg" class="img-fluid pic" alt="">
               <div class="portfolio-info">
-                <h4>App 2</h4>
+                <h4>Front Office</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="assets/img/slide/elvis.jpg" data-gall="portfolioGallery" class="venobox" title="App 2"><i class="icofont-eye"></i></a>
@@ -387,9 +387,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/slide/Single Bedroom 2.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slide/Single Bedroom 2.jpg" class="img-fluid pic" alt="">
               <div class="portfolio-info">
-                <h4>Card 2</h4>
+                <h4>Single Bedroom</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
                   <a href="assets/img/slide/Single Bedroom 2.jpg" data-gall="portfolioGallery" class="venobox" title="Card 2"><i class="icofont-eye"></i></a>
@@ -401,9 +401,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/slide/Single 1.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slide/Single 1.jpg" class="img-fluid pic" alt="">
               <div class="portfolio-info">
-                <h4>Web 2</h4>
+                <h4>Remodeled Single Bedroom</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
                   <a href="assets/img/slide/Single 1.jpg" data-gall="portfolioGallery" class="venobox" title="Web 2"><i class="icofont-eye"></i></a>
@@ -415,9 +415,9 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/slide/Two Bedroom 3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slide/Two Bedroom 3.jpg" class="img-fluid pic" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
+                <h4>Double Bedroom</h4>
                 <p>App</p>
                 <div class="portfolio-links">
                   <a href="assets/img/slide/Two Bedroom 3.jpg" data-gall="portfolioGallery" class="venobox" title="App 3"><i class="icofont-eye"></i></a>
@@ -427,47 +427,47 @@
             </div>
           </div>
 
-          <!-- <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item ">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-7.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slide/grill.PNG" class="img-fluid pic" alt="">
               <div class="portfolio-info">
                 <h4>Card 1</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-7.jpg" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-eye"></i></a>
+                  <a href="assets/img/slide/grill.PNG" data-gall="portfolioGallery" class="venobox" title="Card 1"><i class="icofont-eye"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-8.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slide/back.jpg" class="img-fluid pic" alt="">
               <div class="portfolio-info">
                 <h4>Card 3</h4>
                 <p>Card</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-8.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-eye"></i></a>
+                  <a href="assets/img/slide/back.jpg" data-gall="portfolioGallery" class="venobox" title="Card 3"><i class="icofont-eye"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                 </div>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/portfolio-9.jpg" class="img-fluid" alt="">
+              <img src="assets/img/slide/river.jpg" class="img-fluid pic" alt="">
               <div class="portfolio-info">
                 <h4>Web 3</h4>
                 <p>Web</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/portfolio-9.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
+                  <a href="assets/img/slide/river.jpg" data-gall="portfolioGallery" class="venobox" title="Web 3"><i class="icofont-eye"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="icofont-external-link"></i></a>
                 </div>
               </div>
             </div>
-          </div> -->
+          </div>
 
         </div>
 
@@ -628,6 +628,7 @@
               <p>2920 Colorado Blvd <br>
 
                 Idaho Springs, CO 80452</p>
+                <!-- <img src="assets/img/slide/map.PNG" alt="map"> -->
             </div>
           </div>
 
@@ -685,11 +686,11 @@
 
   <!-- ======= Footer ======= -->
   <footer id="footer">
-    <div class="footer-top">
+    <!-- <div class="footer-top"> -->
       <div class="container">
         <div class="row">
 
-          <div class="col-lg-3 col-md-6 footer-info">
+          <!-- <div class="col-lg-3 col-md-6 footer-info foot">
             <h3>6 & 40 Motel</h3>
             <p>
               2920 Colorado Blvd <br>
@@ -701,7 +702,7 @@
               <a href="https://www.google.com/travel/hotels/entity/CgoIkYKjieWV_ecBEAE/overview?g2lb=2502548%2C4258168%2C4270442%2C4306835%2C4308227%2C4317915%2C4322823%2C4328159%2C4371335%2C4401769%2C4403882%2C4417925%2C4419364%2C4424916%2C4425793%2C4270859%2C4284970%2C4291517%2C4412693&hl=en&gl=us&un=1&rp=EJGCo4nllf3nARCRgqOJ5ZX95wE4AkAASAHAAQI&ictx=1&sa=X&utm_campaign=sharing&utm_medium=link&utm_source=htls&hrf=KhYKBwjkDxAJGAUSBwjkDxAJGAYYASgAggEkMHg4NzZiYTM1NzE3ZmJiZjUxOjB4MWNmZjRhZTUxMjhjMTExmgEmGiQweDg3NmJhMzU3MTdmYmJmNTE6MHgxY2ZmNGFlNTEyOGMxMTE" class="google"><i class="bx bxl-google"></i></a>
               <a href="https://www.facebook.com/6n40motel/" class="facebook"><i class="bx bxl-facebook"></i></a>
             </div>
-          </div>
+          </div> -->
 <!-- 
           <div class="col-lg-2 col-md-6 footer-links">
             <h4>Useful Links</h4>
@@ -734,7 +735,7 @@
 
           </div> -->
 
-        </div>
+        <!-- </div> -->
       </div>
     </div>
 
